--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mern",
     "chat-app"
   ],
-  "author": "Piyush Agarwal",
+  "author": "Anushka Singh",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.8",
